--- a/static/sass/components/_global.scss
+++ b/static/sass/components/_global.scss
@@ -5,26 +5,10 @@
  * ------------------------------------------------- */
 
 body{
-	background: #e5e5e5 url(../../static/images/background.png);
+	background: #e5e5e5 url(../../static/images/background.png) no-repeat;
 	width: 100%;
 	padding: 1rem 10%;
 	padding-bottom: 0;
 	box-sizing: border-box;
 	font-size: .9em;
-
-
-	// 默认样式调整
-	.fa{
-		font-size: 1.2em;
-	}
-	h2{
-		font-size: 1.2em;
-	}
-	h3{
-		font-size: 1.1em;
-		// font-weight: 300;
-	}
-	hr{
-		margin-bottom: .4em;
-	}
 }
