--- a/static/sass/index.scss
+++ b/static/sass/index.scss
@@ -5,3 +5,6 @@
 @import "components/header";
 @import "components/container";
 @import "components/footer";
+
+// @import "custom"
+@import "components/custom";
