--- a/static/sass/components/_custom.scss
+++ b/static/sass/components/_custom.scss
@@ -1,3 +1,9 @@
+@charset "utf-8";
+
+/* -------------------------------------------------
+ * 自定义部分
+ * ------------------------------------------------- */
+
 // 默认样式调整
 .fa{
 	font-size: 1.2em;
