--- a/static/sass/components/_global.scss
+++ b/static/sass/components/_global.scss
@@ -5,7 +5,7 @@
  * ------------------------------------------------- */
 
 body{
-	background: #e5e5e5 url(../../static/images/background.png) no-repeat;
+	background: #e5e5e5 url(../../static/images/background.png);
 	width: 100%;
 	padding: 1rem 10%;
 	padding-bottom: 0;
