--- a/static/sass/components/_custom.scss
+++ b/static/sass/components/_custom.scss
@@ -18,6 +18,30 @@ h3{
 hr{
 	margin-bottom: .4em;
 }
+aside{
+	position: fixed;
+    right: 0;
+    top: 30%;
+    z-index: 2;
+    ul{
+    	li{
+    		margin-bottom: 10px;
+		    -webkit-border-radius: 10px 0 0 10px;
+		    border-radius: 19px 0 0 10px;
+		    -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
+		    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
+		    background: #1abc9c;
+		    a{
+		    	display: inline-block;
+			    width: 80px;
+			    height: 38px;
+			    line-height: 38px;
+			    padding-left: 10px;
+			    color: #fff;
+		    }
+    	}
+    }
+}
 // 进度条样式
 progress {
     background-color: #f6f6f6;
