--- a/static/sass/components/_container.scss
+++ b/static/sass/components/_container.scss
@@ -38,7 +38,7 @@
     				& > img{
     					width: 8rem;
     					border-radius: 50%;
-    					border: 5px solid #607d8b;
+    					// border: 5px solid #607d8b;
     					// box-shadow: 0px 0px 2px 3px rgba(255, 255, 255, 0.7), 0px 0px 30px 8px rgba(0, 0, 0, 0.5);
     				}
     			}
