--- a/assets/sass/components/_container.scss
+++ b/assets/sass/components/_container.scss
@@ -77,6 +77,7 @@
                     -webkit-animation-delay:0.8s;
                 }
     			img{
+                    display: none;
                     width: 8rem;
                     height: 8rem;
                     border-radius: 50%;
