--- a/assets/sass/components/_container.scss
+++ b/assets/sass/components/_container.scss
@@ -20,6 +20,7 @@
     		margin-bottom: 2rem;
     		.portrait{
     			margin: 0 auto;
+                margin-bottom: 1rem;
                 width: 8rem;
                 height: 8rem;
                 overflow: hidden;
